# skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md
tools/skills-export/: README.md  pyproject.toml
tools/skills-export/skills_export/: __init__.py  assemble.py  cli.py  ingest.py  maintain.py  manifest.py  normalize.py  validate.py  validate_claude.py  validate_codex.py  validate_cursor.py
tools/skills-export/skills_export/exporters/: __init__.py  claude.py  codex.py  cursor.py
tools/skills-export/tests/: conftest.py  test_agent_installer.py  test_agent_security_contracts.py  test_assemble.py  test_codex_export.py  test_codex_validation.py  test_crypto_entropy_contracts.py  test_cursor_regression.py  test_cursor_validation.py  test_manifest_metadata.py  test_scientific_claim_contracts.py  test_skills_install.py  test_task10_cli.py
tools/skills-export/tests/fixtures/: cursor-origin-main-sha256.json
tools/skills-export/tests/fixtures/workflows/agent-security/: fake_agent_executor.py  fake_bwrap.py  mcp-after.json  mcp-before.json  payload.txt  public-document.txt  replay-plan.json  scenario-definition.json  trials.json
tools/skills-export/tests/fixtures/workflows/crypto/: contracts.json
tools/skills-export/tests/fixtures/workflows/entropy/: contracts.json
tools/skills-export/tests/fixtures/workflows/science/: agent-only-pass-claim-graph.json  invalid-overlap-sciml-challenge.json  invalid-run-record.json  review-only-sciml-challenge.json  valid-claim-graph.json  valid-run-record.json  (+3 more)
tools/skills-export/tests/integration/: test_codex_marketplace_cli.py
(+374 files in other folders)
